--- a/src/03-forms/styles/styles.css
+++ b/src/03-forms/styles/styles.css
@@ -16,6 +16,10 @@ button {
     padding: 10px;
 }
 
+button:hover {
+    background-color: rgb(200, 200, 200);
+}
+
 span, .error-message {
     color: red;
 }
