--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html,body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -23,8 +29,8 @@ code {
 nav {
   background-color: #363a45;
   height: 100vh;
-  margin-right: 15px;
-  overflow-y: scroll;
+  /* margin-right: 15px; */
+  overflow-y: auto;
   text-align: center;
   width: 250px;
 }
